cbits/qlBond.h

  Leg* qlBondCashflows(QlBond* o, char **e);
  Leg* qlBondRedemptions(QlBond* o, char **e);
  int qlBondSettlementDate(QlBond* o, int d, char **e);
  int qlBondStartDate(QlBond* o, char **e);
  double qlBondYield(QlBond* o, DayCounter* dc, int comp, int freq, double accuracy,
    unsigned maxEvaluations, char **e);
  double qlBondAccruedAmount(QlBond* o, int d, char **e);
  double qlBondCleanPrice1(QlBond* o, double yield, DayCounter* dc, int comp, int freq, int settlementDate, char **e);
  double qlBondDirtyPrice1(QlBond* o, double yield, DayCounter* dc, int comp, int freq, int settlementDate, char **e);
  int qlBondNextCashFlowDate(QlBond* o, int d, char **e);
  double qlBondNextCouponRate(QlBond* o, int d, char **e);
  double qlBondNotional(QlBond* o, int d, char **e);
  int qlBondPreviousCashFlowDate(QlBond* o, int d, char **e);
  double qlBondPreviousCouponRate(QlBond* o, int d, char **e);
  double qlBondSettlementValue1(QlBond* o, double cleanPrice, char **e);
  double qlBondSettlementValue(QlBond* o, char **e);
  double qlBondYield1(QlBond* o, double cleanPrice, DayCounter* dc, int comp, int freq, int settlementDate, double accuracy, unsigned maxEvaluations, char **e);
  int qlBondIsTradable(QlBond* o, int d, char **e);
  double* qlBondNotionals(QlBond* o, unsigned *len, char **e);
  int qlBondFunctionsAccrualDays(QlBond* bond, int settlementDate, char **e);
  int qlBondFunctionsAccrualEndDate(QlBond* bond, int settlementDate, char **e);
  double qlBondFunctionsAccrualPeriod(QlBond* bond, int settlementDate, char **e);
  int qlBondFunctionsAccrualStartDate(QlBond* bond, int settlementDate, char **e);
  int qlBondFunctionsAccruedDays(QlBond* bond, int settlementDate, char **e);
  double qlBondFunctionsAccruedPeriod(QlBond* bond, int settlementDate, char **e);
  double qlBondFunctionsBasisPointValue1(QlBond* bond, double yield, DayCounter* dayCounter, int compounding, int frequency, int settlementDate, char **e);
  double qlBondFunctionsBasisPointValue(QlBond* bond, InterestRate* yield, int settlementDate, char **e);
  double qlBondFunctionsBps1(QlBond* bond, InterestRate* yield, int settlementDate, char **e);
  double qlBondFunctionsBps2(QlBond* bond, double yield, DayCounter* dayCounter, int compounding, int frequency, int settlementDate, char **e);
  double qlBondFunctionsBps(QlBond* bond, QlYieldTermStructure* discountCurve, int settlementDate, char **e);
  double qlBondFunctionsCleanPrice2(QlBond* bond, QlYieldTermStructure* discountCurve, int settlementDate, char **e);
  double qlBondFunctionsCleanPrice3(QlBond* bond, QlYieldTermStructure* discount, double zSpread, DayCounter* dayCounter, int compounding, int frequency, int settlementDate, char **e);
  double qlBondFunctionsCleanPrice4(QlBond* bond, InterestRate* yield, int settlementDate, char **e);
  double qlBondFunctionsConvexity1(QlBond* bond, double yield, DayCounter* dayCounter, int compounding, int frequency, int settlementDate, char **e);
  double qlBondFunctionsConvexity(QlBond* bond, InterestRate* yield, int settlementDate, char **e);
  double qlBondFunctionsDuration1(QlBond* bond, double yield, DayCounter* dayCounter, int compounding, int frequency, int type, int settlementDate, char **e);